[gd_scene load_steps=2 format=2]

[ext_resource path="res://Hurtbox.gd" type="Script" id=1]

[node name="Hurtbox" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="invicibility_end" from="." to="." method="_on_Hurtbox_invicibility_end"]
[connection signal="invicibility_start" from="." to="." method="_on_Hurtbox_invicibility_start"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
